# pytorch-uv-mps

./: LICENSE  README.md  hello.py  pyproject.toml
code/: datacamp-rlhf.ipynb  inference-mps.ipynb  training-rlhf.ipynb
