[project]
name = "pytorch-uv-mps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "diffusers>=0.32.1",
    "transformers>=4.47.1",
    "accelerate>=1.2.1",
    "huggingface-hub[cli]>=0.27.0",
    "protobuf>=5.29.2",
    "sentencepiece>=0.2.0",
    "datasets>=3.2.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
